fix Demographic input box disappears on narrow screens

--- a/client/play/css/main.scss
+++ b/client/play/css/main.scss
@@ -265,7 +265,7 @@ body {
   float: left;
   right: 20px;
   top: 100px;
-  width: 28%;
+  width: 30%;
   //width: 400px;
   font-family: league-gothic, Arial, sans-serif;
   font-size: 120%;
